Bugfix: none != false

--- a/src/app/templates/billing/edit.html.jinja2
+++ b/src/app/templates/billing/edit.html.jinja2
@@ -15,10 +15,12 @@
         <input type="text" name="earned_percentage" value="30">
         <p>Earned Amount</p>
         <input type="text" name="earned_amount" value="{{ billing_position.earned_amount }}">
-        <p>Invoiced Amount</p>
-        <input type="text" name="invoiced_amount" value="{{ billing_position.invoiced_amount }}">
+        {% if billing_position.invoiced_amount %}
+            <p>Invoiced Amount</p>
+            <input type="text" name="invoiced_amount" value="{{ billing_position.invoiced_amount }}">
+            <input type="hidden" name="invoice_id" value="{{ billing_position.invoice_id }}">
+        {% endif %}
 
-        <input type="hidden" name="invoice_id" value="{{ billing_position.invoice_id }}">
 
         <input type="submit" value="Update">
     </form>
