Remove default value from `Percentage`

--- a/src/app/templates/billing/edit.html.jinja2
+++ b/src/app/templates/billing/edit.html.jinja2
@@ -12,7 +12,7 @@
         <p>Billed Hours</p>
         <input type="text" name="billed_hours" value="{{ billing_position.billed_hours }}">
         <p>Earned Percentage</p>
-        <input type="text" name="earned_percentage" value="30">
+        <input type="text" name="earned_percentage">
         <p>Earned Amount</p>
         <input type="text" name="earned_amount" value="{{ billing_position.earned_amount }}">
         {% if billing_position.invoiced_amount %}
