Added ability to remove invoice

--- a/src/app/templates/invoicing/home.html.jinja2
+++ b/src/app/templates/invoicing/home.html.jinja2
@@ -14,6 +14,7 @@
             <td>{{ '%0.2f' % invoice.total }}</td>
             <td>
                 <a href="{{ url_for('invoicing.invoice', invoice_id=invoice.id) }}">💰</a>
+                <a href="{{ url_for('invoicing.remove', invoice_id=invoice.id) }}">❌</a>
             </td>
         </tr>
         {% endfor %}
