--- a/src/app/templates/invoicing/invoice.html.jinja2
+++ b/src/app/templates/invoicing/invoice.html.jinja2
@@ -14,7 +14,7 @@
             </tr>
             {% for open_billing_position in open_billing_positions %}
             <tr>
-                <td><input type="checkbox" name="file_id[]" value="{{ open_billing_position['id'] }}"></td>
+                <td><input type="checkbox" name="billing_position_id[]" value="{{ open_billing_position['id'] }}"></td>
                 <td>{{ open_billing_position['date'] }}</td>
                 <td>{{ open_billing_position['file'] }}</td>
                 <td>{{ open_billing_position['earned_amount'] }}</td>
